[package]
name = "autopilot"
description = "A simple auto-updater and web panel for Docker Compose applications."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.38", features = ["full"] }
tower = "0.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower-http = { version = "0.5.2", features = ["trace"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
toml = "0.8.14"
